<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="yc_app_name">yancha</string>

    <string name="yc_title_search">過去ログ</string>

    <string name="yc_common_ok">OK</string>
    
    <!-- action menu -->
    <string name="yc_action_hints">HINTS</string>
    <string name="yc_action_info">INFO</string>
    <string name="yc_action_settings">設定</string>
    <string name="yc_action_logout">ログアウト</string>
    <string name="yc_action_about">yanchaについて</string>
    <string name="yc_action_join_users">ログインユーザー一覧</string>
    <string name="yc_hello_world">Hello world!</string>

    <string name="yc_login_twitter">Twitterでログイン</string>
    <string name="yc_nickname">ニックネーム</string>
    <string name="yc_login">ログイン</string>
    <string name="yc_login_or">または</string>
    <string name="yc_login_server">接続先</string>
    <string name="yc_login_server_default">yancha.hachiojipm.org</string>
    <string name="yc_login_login_twitter_start">http://%s/login/twitter/start?token_only=1&amp;callback_url=yancha://login/twitter/callback</string>
    
    <!-- misc -->
    <string name="yc_submit">送信</string>
    <string name="yc_link_search"><u>過去ログ検索</u></string>
    <string name="yc_search_option">検索オプション</string>
    <string name="yc_search_keyword">検索キーワード</string>
    <string name="yc_default_tag">#PUBLIC</string>
    
    <string name="yc_connection_failed">接続に失敗しました</string>
    
    <!--  join users -->
    <string name="yc_join_users_unit">人</string>
    
    <!-- dummy -->
    <string name="yc_dummy_join_users_count">0人</string>
    <string name="yc_dummy_message">おはようございます、いい天気ですね¥nおはようございます、いい天気ですね￥のはようございます、いい天気ですね #PUBLIC</string>
    <string name="yc_dummy_timestamp">0分前</string>
    <string name="yc_dummy_nickname">名無しさん</string>
    <string name="yc_dummy_profile_image_url">/static/img/nobody.png</string>
    
    <!-- net status -->
    <string name="join_users_image_content_description">you</string>
    <string name="yc_chat_status_offline">オフラインです</string>
    <string name="yc_chat_status_online"></string>
    
    <!-- information -->
    <string name="yc_about">yancha (旧名yairc) はログの保全、リアルタイム性、モバイル端末への対応を重視した、Perlで作成されたチャットシステムです。</string>
    <!-- hints -->
    <string name="yc_hints_quotation">&gt;&gt;
引用テキスト
&lt;&lt;</string>
    <string name="yc_hints_javascript">&gt;|javascript|
console.log("syntax hiright for javascript");
||&lt;</string>
    <string name="yc_hints_perl">&gt;|perl|
print "syntax hiright for Perl";
||&lt;</string>
    
</resources>
