<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yc_action_hints"
        android:textSize="20sp"
        android:textColor="#004065"
        android:background="#bfd8e7" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="20dp"
        android:padding="4dp"
        android:background="#dddddd"
        android:text="@string/yc_hints_quotation" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="20dp"
        android:padding="4dp"
        android:background="#dddddd"
        android:text="@string/yc_hints_javascript" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="20dp"
        android:padding="4dp"
        android:background="#dddddd"
        android:text="@string/yc_hints_perl" />

</LinearLayout>
