<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bfd8e7"
    android:gravity="center"
    android:orientation="vertical">

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

    <Button
        android:id="@+id/loginAuthTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yc_login_twitter"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:background="#004065" />
   </LinearLayout>
    
    <TextView android:layout_height="120dp" android:layout_width="match_parent" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

    <EditText
        android:id="@+id/loginAuthSimpleNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:imeOptions="actionSend"
        android:hint="@string/yc_nickname"
        android:lines="1"
        android:textSize="24sp" />

    <Button
        android:id="@+id/loginAuthSimpleSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yc_login"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:background="#004065" />
   </LinearLayout>
    
    <TextView android:layout_height="120dp" android:layout_width="match_parent" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >
    
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yc_action_info"
            android:textSize="24sp"
	        android:layout_marginBottom="20dp"
             />
        
        <TextView 
            android:id="@+id/loginVersionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
        
    </LinearLayout>
</LinearLayout>