<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/common_message_cell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
        
    <jp.sharakova.android.urlimageview.UrlImageView
        android:id="@+id/messageCellProfileImageUrl"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:adjustViewBounds="true"
        android:layout_gravity="center" />
    
    
    <RelativeLayout
        android:id="@+id/messageCellHeader"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/messageCellProfileImageUrl"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >
        
        <TextView
            android:id="@+id/messageCellNickname"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/yc_dummy_nickname"
            android:textColor="#666666"
            />

           <TextView
            android:id="@+id/messageCellTimestamp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/yc_dummy_timestamp"
            android:textColor="#333333"
            />
           
    </RelativeLayout>
    
    <TextView 
        android:id="@+id/messageCellMessage"
        android:layout_toRightOf="@+id/messageCellProfileImageUrl"
        android:layout_below="@+id/messageCellHeader"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/yc_dummy_message"
        android:textColor="#333333"
        android:autoLink="web"
         />
    
    <TextView
        android:id="@+id/messageCellPlusplus"
        android:layout_below="@+id/messageCellMessage"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:visibility="gone"
        />
    
</RelativeLayout>
